fix(datamimic): Java 11 compatibility - Collectors.toList() instead of Stream.toList()
Stream.toList() is Java 16+; the project targets 11 and the migration CI
builds on JDK 11 (a newer local JDK does not enforce source/target).